--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "juomasivu",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5159",
   "dependencies": {
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
